# GeoPlegma

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: objective.md
.github/workflows/: deploy-docs.yml  pull_request_template.md  release-js.yml
api/: Cargo.toml
api/example/: basic.rs
api/src/: constants.rs  factory.rs
api/src/adapters/dggal/: common.rs  grids.rs
api/src/adapters/h3o/: h3.rs
api/src/adapters/healpixgeo/: healpix.rs  healpixgeo.rs  mod.rs
api/src/error/: healpixgeo.rs  mod.rs
api/src/models/: common.rs
api/tests/: zone_count.rs
bary/: Cargo.toml  dump-src.sh
bary/src/: canvas.rs  colors.rs  main.rs  svg.rs
bary/src/models/: aperture.rs  bary.rs  cart.rs  cell.rs  mod.rs
bootstrap_docs/: 404.html  get-started.html  hashmap.json  index.html
bootstrap_docs/assets/: app.C9rqSw9c.js  get-started.md.Cb4lRpMt.js  get-started.md.Cb4lRpMt.lean.js  index.md.B64934Ym.js  style.D4ST6_5b.css
bootstrap_docs/assets/chunks/: framework.D1nyJLIA.js  theme.ctHM3m6q.js
dggrs/: Cargo.toml
dggrs/bindings/nodejs/: pnpm-lock.yaml  tsdown.config.ts
dggrs/bindings/nodejs/src/: extend.ts  index.d.ts  index.node  index.ts  utils.ts
dggrs/bindings/nodejs/tests/: index.test.ts
dggrs/example/: basic.rs
dggrs/src/: factory.rs  lib.rs
dggrs/src/adapters/: mod.rs
dggrs/src/adapters/dggal/: common.rs  context.rs  grids.rs
dggrs/src/adapters/dggrid/: common.rs  igeo7.rs  isea3h.rs
dggrs/src/adapters/h3o/: h3.rs  h3o.rs
dggrs/src/bindings/: mod.rs
dggrs/src/bindings/napi/: README.md  package-lock.json  package.json
dggrs/src/bindings/napi/models/: common.rs
dggrs/src/bindings/napi/ports/: dggrs.rs
dggrs/src/bindings/wasm/: mod.rs
dggrs/src/bindings/wasm/adapters/dggrid/: common.rs  dggrid.rs  igeo7.rs  isea3h.rs  mod.rs
dggrs/src/bindings/wasm/factory/: dggrs_factory.rs
dggrs/src/bindings/wasm/models/: common.rs
dggrs/src/bindings/wasm/ports/: dggrs.rs  mod.rs
dggrs/src/error/: dggrid.rs
dggrs/src/factory/: dggrs_factory.rs
dggrs/src/macros/: wasm.rs
dggrs/src/models/: common.rs
dggrs/src/ports/: dggrs.rs
docs/: get-started.md  index.md  pnpm-lock.yaml
docs/.vitepress/: config.mts  config.ts
geoplegma/: Cargo.toml
geoplegma/benches/: dggrs.rs
geoplegma/example/: basic.rs
geoplegma/src/: api.rs  constants.rs  factory.rs  lib.rs  types.rs
geoplegma/src/adapters/dggal/: common.rs  grids.rs
geoplegma/src/error/: dggal.rs  factory.rs  mod.rs  port.rs
geoplegma/src/models/: common.rs
geoplegma/tests/: parent_from_zone.rs  primary_parent_from_zone.rs  zone_count.rs
gp-bindings/js/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  valsout.txt
gp-bindings/js/__test__/: index.spec.ts
gp-bindings/js/examples/: basic.rs
gp-bindings/nodejs/: .gitignore  README.md  package.json
gp-bindings/nodejs/src/: extend.ts  index.d.ts  index.node  utils.ts
gp-bindings/nodejs/tests/: index.test.ts
gp-dggrs/: Cargo.toml
gp-dggrs/examples/: ivea3h-bary.rs
gp-dggrs/src/: sys_api.rs
gp-dggrs/src/impls/: ivea3h_bary.rs
gp-encoding/: Cargo.toml
gp-encoding/example/: geotiff_convert.rs  print_all_cells.rs  query_point.rs  zarr_roundtrip.rs
gp-encoding/src/: common.rs  error.rs  geotiff_convert.rs  grid.rs  lib.rs  main.rs  models.rs  query.rs  stats.rs  storage.rs  value.rs  zarr.rs
gp-encoding/visualization/: .gitignore  index.html  package.json  pnpm-lock.yaml
gp-encoding/visualization-app/: README.md
gp-encoding/visualization-app/src/: App.css  App.tsx
gp-encoding/visualization-app/src-tauri/src/: lib.rs  main.rs
gp-encoding/visualization/src/: main.js
gp-grid/src/: lib.rs
gp-grid/src/projections/: mod.rs
gp-proj/: Cargo.toml  README.md
gp-proj/example/: basic.rs  polygon.rs
gp-proj/src/projections/: README.md
gp-proj/src/utils/: mod.rs  shape.rs
gp-stat/: Cargo.toml
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/dggal/: common.rs  dggal.rs  grids.rs  ivea3h.rs  mod.rs
src/adapters/dggrid/: common.rs  igeo7.rs  isea3h.rs
src/adapters/h3o/: common.rs  h3.rs
src/constants/: polyhedron.rs
src/error/: dggal.rs  dggrid.rs  factory.rs  h3o.rs  mod.rs  port.rs
src/factory/: dggrs_factory.rs
src/layout/: icosahedron_net.rs  mod.rs
src/models/: common.rs  mod.rs
src/polyhedron/: icosahedron.rs  mod.rs
src/ports/: dggrs.rs
src/projections/: mod.rs  vgc.rs
src/projections/polyhedron/: icosahedron.rs  traits.rs
src/projections/projections/: vgc.rs
src/traits/: mod.rs  polyhedron.rs  projection.rs
tests/: grids.rs
viewer-3d/: package.json  pnpm-lock.yaml
viewer-3d/src/: App.css  App.tsx  vite-env.d.ts
viewer-3d/src-tauri/: Cargo.toml  tauri.conf.json
viewer-3d/src-tauri/src/: lib.rs  main.rs
(+17 files in other folders)
