[package]
name = "geo_plegmata"
version = "0.2.0"
uicense = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"

[dependencies]
geo = "0.30.0"
rand = "0.8.5"
tracing = "0.1.41"
h3o = { version = "0.8.0", features = ["geo"] }
dggal-rust = {git = "https://github.com/GeoPlegma/dggal-rust.git", branch = "unified-crate"}
rayon = "1.10.0"
thiserror = "2.0.12"

[lib]
name = "geo_plegmata"
path = "src/lib.rs"
