[package]
name = "dggrs"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
rust-version = "1.88"

[dependencies]
geo = "0.30.0"
rand = "0.8.5"
tracing = "0.1.41"
h3o = { version = "0.8.0", features = ["geo"] }
rayon = "1.10.0"
thiserror = "2.0.12"
once_cell = "1.21.0"

napi = "3.2.4"
napi-derive = "3.2.4"

# this is for later when we have wasm for browser
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dggal-rust = {git = "https://github.com/GeoPlegma/dggal-rust.git", branch = "mj/update-unified-crate"}
# dggal-rust = { path = "../../dggal-rust" }

[lib]
crate-type = ["cdylib"]

# this is for later when we have wasm for browser
[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["native"]
native = []   # native builds include everything
wasm = []     # for wasm builds run: wasm-pack build --target web --no-default-features --features wasm
