[package]
name = "gp-encoding"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "../README.md"
rust-version = "1.88"

[dependencies]
geoplegma = { path = "../geoplegma" }
gdal = "0.19"
geo = "0.30"
rayon = "1.11"
geo-types = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zarrs = { version = "0.23", features = ["filesystem", "zstd", "gzip", "ndarray"] }
zarrs_filesystem = "0.3"

[[bin]]
name = "gp-encoding"
path = "src/main.rs"
